docs: drop finished/rejected items; fold ADR-0001 into ARCHITECTURE; delete Kotlin EWMA duplicate
Docs (per IMPROVEMENTS.md / DESIGN_SUGGESTIONS.md / TODO.md):
- TODO.md: remove the four completed tasks (P1.0, P3.4+P3.5, P1.2, P3.7);
  keep their still-open follow-ups (real-frame validation, model re-export /
  resize segfault) as the first item; fix stale test count.
- IMPROVEMENTS.md: remove finished items and the historical build-failure
  and fixed-bug sections; keep only remaining work (P1.1, P1.3, P1.5,
  P2.x, P3.1/P3.2/P3.6/P3.8).
- DESIGN_SUGGESTIONS.md: remove implemented suggestions (ModelRunner,
  Frame, out-buffer, FFI hardening, Pipeline/TemporalMode rename) and
  push-back/premature ones (hardware-buffer lock protocol, ring-buffer
  temporal state, KMP adapter contracts, iOS symmetry, async pipeline).
- cbindgen (P1.8) was evaluated and rejected; the hand-maintained pure-C
  header stays the source of truth, so the item is dropped.

ADR-0001: the decision is implemented and its ongoing constraints are
already documented in core/README.md and external/models/README.md, so a
standalone ADR file adds little. Fold the decision into ARCHITECTURE.md
(§11 'Inference placement') and delete docs/ADR-0001-inference-runner.md;
update all references.

App (clearly dead code per the design tenets):
- Delete LlieEwmaEnhancer.kt: Kotlin re-implementation of the Rust
  EwmaFilter/FrameBlendFilter; the design says all business logic lives in
  the Rust core and Kotlin only calls the FFI.
- VideoPipelineManager.kt becomes a pure placeholder (no Kotlin-side
  filter logic); this also fixes a call to the non-existent
  SystemMonitor.monitor(), which broke the app build.
- app/shared/README.md: drop the stale 'core/' bullet (no such directory).

Placeholders (temporal pipeline stub, MainScreen, SystemMonitor,
BenchmarkResult, iOS README) are kept — the project is a POC.